; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_xhci.c_CSB_RD4.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/nvidia/extr_tegra_xhci.c_CSB_RD4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tegra_xhci_softc = type { i32 }

@XUSB_CFG_ARU_C11_CSBRANGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tegra_xhci_softc*, i32)* @CSB_RD4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CSB_RD4(%struct.tegra_xhci_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.tegra_xhci_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.tegra_xhci_softc* %0, %struct.tegra_xhci_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.tegra_xhci_softc*, %struct.tegra_xhci_softc** %3, align 8
  %6 = load i32, i32* @XUSB_CFG_ARU_C11_CSBRANGE, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @ARU_C11_CSBRANGE_PAGE(i32 %7)
  %9 = call i32 @FPCI_WR4(%struct.tegra_xhci_softc* %5, i32 %6, i32 %8)
  %10 = load %struct.tegra_xhci_softc*, %struct.tegra_xhci_softc** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ARU_C11_CSBRANGE_ADDR(i32 %11)
  %13 = call i32 @FPCI_RD4(%struct.tegra_xhci_softc* %10, i32 %12)
  ret i32 %13
}

declare dso_local i32 @FPCI_WR4(%struct.tegra_xhci_softc*, i32, i32) #1

declare dso_local i32 @ARU_C11_CSBRANGE_PAGE(i32) #1

declare dso_local i32 @FPCI_RD4(%struct.tegra_xhci_softc*, i32) #1

declare dso_local i32 @ARU_C11_CSBRANGE_ADDR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
